# crypto-demo

./: .gitignore  Makefile  README.md  pyproject.toml
data/: seeds.txt
data/ofac/: sanctioned_addresses_XBT.txt
data/tagpacks/custom/: colonial_pipeline_2021.yaml  twitter_hack_2020.yaml
notebooks/: 01_proof_of_funds.ipynb  02_case_studies.ipynb  03_validation_and_comparison.ipynb
pof/: __init__.py  cases.py  clustering.py  dashboard.py  explorer.py  graph.py  precompute.py  severity.py  tagpacks.py  validation.py
pof/metrics/: __init__.py  aggregate.py  direct_exposure.py  distance.py  haircut.py
proposal/: APPROACH.md  Proof of Funds Group 3 Project Phase 1.pptx  generate_figures.py  generate_final_report.py  generate_presentation.py  generate_presentation_pdf.py  presentation.pptx  presentation_v2.pptx  presentation_v3.pptx  presentation_v4.pptx  recompute_cases.py  report.tex
tests/: conftest.py  test_clustering.py  test_graph.py  test_metrics.py  test_severity.py  test_tagpacks.py  test_validation.py
